tests/baselines/reference/computedPropertyNames17_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(3,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(3,9): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(4,16): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(4,16): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(5,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(5,9): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(6,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(6,9): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(7,16): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(7,16): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(8,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts(8,9): error TS2464: A computed property name must be of type 'string', 'number', or 'any'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames17_ES5.ts (12 errors) ====
    var b: boolean;
    class C {
        get [b]() { return 0;}
            ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        static set [true](v) { }
                   ~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
                   ~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        get [[]]() { return 0; }
            ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        set [{}](v) { }
            ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        static get [undefined]() { return 0; }
                   ~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
                   ~~~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
        set [null](v) { }
            ~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', or 'any'.
    }